# License: 5G-MAG Public License (v1.0)
# Copyright: (C) 2024 British Broadcasting Corporation
#
# For full license terms please see the LICENSE file distributed with this
# program. If this file is missing then the license can be retrieved from
# https://drive.google.com/file/d/1cinCiA778IErENZ3JN52VFW-1ffHpx7Z/view

libspdc_name = 'spdc'
libspdc_version_major = 0
libspdc_version_minor = 1
libspdc_version_micro = 0

libspdc_version = '@0@.@1@.@2@'.format(libspdc_version_major,libspdc_version_minor,libspdc_version_micro)

libspdc_inst_includes = files('''
    data-collection-sp/data-collection.h

    data-collection-sp/data-reporting.h
    data-collection-sp/data-reporting-provisioning.h
    data-collection-sp/data-reporting-configuration.h
    data-collection-sp/event-exposure.h
    data-collection-sp/lifecycle.h
    data-collection-sp/ogs-list-support.h
    data-collection-sp/macros.h

    data-collection-sp/AccessTokenErr.h
    data-collection-sp/AccessTokenReq.h
    data-collection-sp/AccuracyFulfilmentIndicator_anyOf.h
    data-collection-sp/AccuracyFulfilmentIndicator.h
    data-collection-sp/AddrFqdn.h
    data-collection-sp/AfEvent_anyOf.h
    data-collection-sp/AfEventExposureNotif.h
    data-collection-sp/AfEventExposureSubsc.h
    data-collection-sp/AfEvent.h
    data-collection-sp/AfEventNotification.h
    data-collection-sp/ANBRNetworkAssistanceInvocationRecord.h
    data-collection-sp/AnyType.h
    data-collection-sp/AppExpUeBehaviour.h
    data-collection-sp/ApplicationFlowDescription.h
    data-collection-sp/ApplicationSpecificRecord_allOf.h
    data-collection-sp/ApplicationSpecificRecord.h
    data-collection-sp/BaseEventCollection.h
    data-collection-sp/BaseEventRecord.h
    data-collection-sp/BaseRecord_1.h
    data-collection-sp/BaseRecord.h
    data-collection-sp/BatteryIndication_anyOf.h
    data-collection-sp/BatteryIndication.h
    data-collection-sp/BufferedNotificationsAction_anyOf.h
    data-collection-sp/BufferedNotificationsAction.h
    data-collection-sp/CacheStatus_anyOf.h
    data-collection-sp/CacheStatus.h
    data-collection-sp/CellIdentifierType_anyOf.h
    data-collection-sp/CellIdentifierType.h
    data-collection-sp/CivicAddress.h
    data-collection-sp/CollectiveBehaviourFilter.h
    data-collection-sp/CollectiveBehaviourFilterType_anyOf.h
    data-collection-sp/CollectiveBehaviourFilterType.h
    data-collection-sp/CollectiveBehaviourInfo.h
    data-collection-sp/CommunicationCollection.h
    data-collection-sp/CommunicationIndicator_anyOf.h
    data-collection-sp/CommunicationIndicator.h
    data-collection-sp/CommunicationRecord_allOf.h
    data-collection-sp/CommunicationRecord.h
    data-collection-sp/ConsumptionReportingEvent_allOf.h
    data-collection-sp/ConsumptionReportingEvent.h
    data-collection-sp/ConsumptionReportingUnitsCollection_allOf.h
    data-collection-sp/ConsumptionReportingUnitsCollection.h
    data-collection-sp/CpFailureCode_anyOf.h
    data-collection-sp/CpFailureCode.h
    data-collection-sp/CpParameterSet.h
    data-collection-sp/DataAccessProfile.h
    data-collection-sp/DataAccessProfile_locationAccessRestrictions.h
    data-collection-sp/DataAccessProfile_timeAccessRestrictions.h
    data-collection-sp/DataAccessProfile_userAccessRestrictions.h
    data-collection-sp/DataAccessProfile_userAccessRestrictions_userIds_inner.h
    data-collection-sp/DataAggregationFunctionType_anyOf.h
    data-collection-sp/DataAggregationFunctionType.h
    data-collection-sp/DataCollectionClientType_anyOf.h
    data-collection-sp/DataCollectionClientType.h
    data-collection-sp/DataDomain_anyOf.h
    data-collection-sp/DataDomain.h
    data-collection-sp/DataProcessingType_anyOf.h
    data-collection-sp/DataProcessingType.h
    data-collection-sp/DataReport.h
    data-collection-sp/DataReportingCondition.h
    data-collection-sp/DataReportingCondition_threshold.h
    data-collection-sp/DataReportingConditionType_anyOf.h
    data-collection-sp/DataReportingConditionType.h
    data-collection-sp/DataReportingConfiguration.h
    data-collection-sp/DataReportingConfigurationPatch.h
    data-collection-sp/DataReportingEventTrigger_anyOf.h
    data-collection-sp/DataReportingEventTrigger.h
    data-collection-sp/DataReportingProvisioningSession.h
    data-collection-sp/DataReportingRule.h
    data-collection-sp/DataReportingSession.h
    data-collection-sp/DataSamplingRule.h
    data-collection-sp/DatVolTransTimeCollection.h
    data-collection-sp/Direction_anyOf.h
    data-collection-sp/Direction.h
    data-collection-sp/DispersionCollection.h
    data-collection-sp/DynamicPolicy.h
    data-collection-sp/DynamicPolicyInvocationEvent_allOf.h
    data-collection-sp/DynamicPolicyInvocationEvent.h
    data-collection-sp/DynamicPolicyInvocationsCollection_allOf.h
    data-collection-sp/DynamicPolicyInvocationsCollection.h
    data-collection-sp/Ecgi.h
    data-collection-sp/EllipsoidArc_allOf.h
    data-collection-sp/EllipsoidArc.h
    data-collection-sp/EndpointAddress.h
    data-collection-sp/EthFlowDescription.h
    data-collection-sp/EventConsumerType_anyOf.h
    data-collection-sp/EventConsumerType.h
    data-collection-sp/EventFilter.h
    data-collection-sp/EventRecordType_anyOf.h
    data-collection-sp/EventRecordType.h
    data-collection-sp/EventsSubs.h
    data-collection-sp/Exception.h
    data-collection-sp/ExceptionId_anyOf.h
    data-collection-sp/ExceptionId.h
    data-collection-sp/ExceptionInfo.h
    data-collection-sp/ExceptionTrend_anyOf.h
    data-collection-sp/ExceptionTrend.h
    data-collection-sp/FixType_anyOf.h
    data-collection-sp/FixType.h
    data-collection-sp/FlowDirection_anyOf.h
    data-collection-sp/FlowDirection.h
    data-collection-sp/FlowInfo.h
    data-collection-sp/GADShape.h
    data-collection-sp/GeographicalCoordinates.h
    data-collection-sp/GeographicArea.h
    data-collection-sp/GlobalRanNodeId.h
    data-collection-sp/GNbId.h
    data-collection-sp/GNSSAssistDataInfo.h
    data-collection-sp/GnssId_anyOf.h
    data-collection-sp/GnssId.h
    data-collection-sp/GnssPositioningMethodAndUsage.h
    data-collection-sp/GNSSServArea.h
    data-collection-sp/HighAccuracyGnssMetrics.h
    data-collection-sp/HorizontalVelocity.h
    data-collection-sp/HorizontalVelocityWithUncertainty.h
    data-collection-sp/HorizontalWithVerticalVelocityAndUncertainty.h
    data-collection-sp/HorizontalWithVerticalVelocity.h
    data-collection-sp/IndoorOutdoorInd_anyOf.h
    data-collection-sp/IndoorOutdoorInd.h
    data-collection-sp/IntegrityComputingEntity.h
    data-collection-sp/IntegrityComputingEntity_anyOf.h
    data-collection-sp/IntegrityProtectionLevel.h
    data-collection-sp/IntegrityResult.h
    data-collection-sp/InvalidParam.h
    data-collection-sp/IpAddr.h
    data-collection-sp/IpPacketFilterSet.h
    data-collection-sp/Ipv6Addr.h
    data-collection-sp/Ipv6Prefix.h
    data-collection-sp/Local2dPointUncertaintyEllipse_allOf.h
    data-collection-sp/Local2dPointUncertaintyEllipse.h
    data-collection-sp/Local3dPointUncertaintyEllipsoid_allOf.h
    data-collection-sp/Local3dPointUncertaintyEllipsoid.h
    data-collection-sp/LocalArea.h
    data-collection-sp/LocalOrigin.h
    data-collection-sp/LocationArea5G.h
    data-collection-sp/LocationData.h
    data-collection-sp/LocationRecord_allOf.h
    data-collection-sp/LocationRecord.h
    data-collection-sp/LosNlosMeasureInd_anyOf.h
    data-collection-sp/LosNlosMeasureInd.h
    data-collection-sp/M5BitRateSpecification.h
    data-collection-sp/M5QoSSpecification.h
    data-collection-sp/MediaStreamingAccess_connectionMetrics.h
    data-collection-sp/MediaStreamingAccessesCollection_allOf.h
    data-collection-sp/MediaStreamingAccessesCollection.h
    data-collection-sp/MediaStreamingAccessEvent.h
    data-collection-sp/MediaStreamingAccess.h
    data-collection-sp/MediaStreamingAccessRecord.h
    data-collection-sp/MediaStreamingAccess_requestMessage.h
    data-collection-sp/MediaStreamingAccess_responseMessage.h
    data-collection-sp/MediaStreamingBaseReportingRecord.h
    data-collection-sp/MediaStreamingSessionIdentification.h
    data-collection-sp/MediaTransportProto_anyOf.h
    data-collection-sp/MediaTransportProto.h
    data-collection-sp/MediaType_anyOf.h
    data-collection-sp/MediaType.h
    data-collection-sp/MinorLocationQoS.h
    data-collection-sp/MlModelInterInd.h
    data-collection-sp/MSAccessActivityCollection.h
    data-collection-sp/MsConsumptionCollection.h
    data-collection-sp/MsDynPolicyInvocationCollection.h
    data-collection-sp/MsNetAssInvocationCollection.h
    data-collection-sp/MsQoeMetricsCollection.h
    data-collection-sp/MutingExceptionInstructions.h
    data-collection-sp/MutingNotificationsSettings.h
    data-collection-sp/Ncgi.h
    data-collection-sp/NetworkAreaInfo.h
    data-collection-sp/NetworkAssistanceInvocationEvent_allOf.h
    data-collection-sp/NetworkAssistanceInvocationEvent.h
    data-collection-sp/NetworkAssistanceInvocation.h
    data-collection-sp/NetworkAssistanceInvocation_recommendedQoS.h
    data-collection-sp/NetworkAssistanceInvocationsCollection_allOf.h
    data-collection-sp/NetworkAssistanceInvocationsCollection.h
    data-collection-sp/NetworkAssistanceSession.h
    data-collection-sp/NetworkAssistanceType_anyOf.h
    data-collection-sp/NetworkAssistanceType.h
    data-collection-sp/NFType_anyOf.h
    data-collection-sp/NFType.h
    data-collection-sp/NoProfileMatchInfo.h
    data-collection-sp/NoProfileMatchReason_anyOf.h
    data-collection-sp/NoProfileMatchReason.h
    data-collection-sp/NotificationFlag_anyOf.h
    data-collection-sp/NotificationFlag.h
    data-collection-sp/NotificationMethod_anyOf.h
    data-collection-sp/NotificationMethod.h
    data-collection-sp/NwdafEvent_anyOf.h
    data-collection-sp/NwdafEvent.h
    data-collection-sp/PartitioningCriteria_anyOf.h
    data-collection-sp/PartitioningCriteria.h
    data-collection-sp/PduSetHandlingInfo_anyOf.h
    data-collection-sp/PduSetHandlingInfo.h
    data-collection-sp/PduSetQosPara.h
    data-collection-sp/PerFlowServiceExperienceInfo.h
    data-collection-sp/PerformanceDataCollection.h
    data-collection-sp/PerformanceData.h
    data-collection-sp/PerformanceDataRecord_allOf.h
    data-collection-sp/PerformanceDataRecord.h
    data-collection-sp/PeriodicEventInfo.h
    data-collection-sp/PerUeAttribute.h
    data-collection-sp/PlmnId.h
    data-collection-sp/PlmnIdNid.h
    data-collection-sp/Point_allOf.h
    data-collection-sp/PointAltitude_allOf.h
    data-collection-sp/PointAltitude.h
    data-collection-sp/PointAltitudeUncertainty_allOf.h
    data-collection-sp/PointAltitudeUncertainty.h
    data-collection-sp/Point.h
    data-collection-sp/PointUncertaintyCircle_allOf.h
    data-collection-sp/PointUncertaintyCircle.h
    data-collection-sp/PointUncertaintyEllipse_allOf.h
    data-collection-sp/PointUncertaintyEllipse.h
    data-collection-sp/Polygon_allOf.h
    data-collection-sp/Polygon.h
    data-collection-sp/PositioningMethodAndUsage.h
    data-collection-sp/PositioningMethod_anyOf.h
    data-collection-sp/PositioningMethod.h
    data-collection-sp/PositioningMode_anyOf.h
    data-collection-sp/PositioningMode.h
    data-collection-sp/ProblemDetails.h
    data-collection-sp/ProtocolDescription.h
    data-collection-sp/ProvisioningSessionType_anyOf.h
    data-collection-sp/ProvisioningSessionType.h
    data-collection-sp/QoEMetricsCollection_allOf.h
    data-collection-sp/QoEMetricsCollection.h
    data-collection-sp/QoEMetricsEvent_allOf.h
    data-collection-sp/QoEMetricsEvent_allOf_metrics.h
    data-collection-sp/QoEMetricsEvent_allOf_samples.h
    data-collection-sp/QoEMetricsEvent.h
    data-collection-sp/QueryParamCombination.h
    data-collection-sp/QueryParameter.h
    data-collection-sp/r_2DRelativeLocation.h
    data-collection-sp/r_3DRelativeLocation.h
    data-collection-sp/RangeDirection.h
    data-collection-sp/RedirectResponse.h
    data-collection-sp/RelativeCartesianLocation.h
    data-collection-sp/RelativeDirection_anyOf.h
    data-collection-sp/RelativeDirection.h
    data-collection-sp/ReportingInformation.h
    data-collection-sp/RtpHeaderExtInfo.h
    data-collection-sp/RtpHeaderExtType_anyOf.h
    data-collection-sp/RtpHeaderExtType.h
    data-collection-sp/RtpPayloadFormat_anyOf.h
    data-collection-sp/RtpPayloadFormat.h
    data-collection-sp/RtpPayloadInfo.h
    data-collection-sp/ScheduledCommunicationTime.h
    data-collection-sp/ScheduledCommunicationType_anyOf.h
    data-collection-sp/ScheduledCommunicationType.h
    data-collection-sp/SdfMethod_anyOf.h
    data-collection-sp/SdfMethod.h
    data-collection-sp/ServiceExperienceInfoPerApp.h
    data-collection-sp/ServiceExperienceInfoPerFlow.h
    data-collection-sp/ServiceExperienceRecord_allOf.h
    data-collection-sp/ServiceExperienceRecord.h
    data-collection-sp/Snssai.h
    data-collection-sp/StationaryIndication_anyOf.h
    data-collection-sp/StationaryIndication.h
    data-collection-sp/SubscriptionAction_anyOf.h
    data-collection-sp/SubscriptionAction.h
    data-collection-sp/SupportedGADShapes_anyOf.h
    data-collection-sp/SupportedGADShapes.h
    data-collection-sp/SvcExperience.h
    data-collection-sp/Tai.h
    data-collection-sp/TimeWindow.h
    data-collection-sp/TrafficProfile_anyOf.h
    data-collection-sp/TrafficProfile.h
    data-collection-sp/TripPlanRecord_allOf.h
    data-collection-sp/TripPlanRecord.h
    data-collection-sp/TypedLocation.h
    data-collection-sp/UeAreaIndication.h
    data-collection-sp/UeCommunicationCollection.h
    data-collection-sp/UeMobilityCollection.h
    data-collection-sp/UeTrajectoryCollection.h
    data-collection-sp/UmtLocationArea5G_allOf.h
    data-collection-sp/UmtLocationArea5G.h
    data-collection-sp/UncertaintyEllipse.h
    data-collection-sp/UncertaintyEllipsoid.h
    data-collection-sp/UnidirectionalQoSSpecification.h
    data-collection-sp/Usage_anyOf.h
    data-collection-sp/Usage.h
    data-collection-sp/UsageThreshold.h
    data-collection-sp/UserDataCongestionCollection.h
    data-collection-sp/VelocityEstimate.h
    data-collection-sp/VerticalDirection.h
'''.split())

subdir('data-collection-sp')

libspdc_inc = include_directories('.')

libspdc_includes = install_headers(libspdc_inst_includes, preserve_path: true)
